[project]
name = "solshield-mcp"
version = "0.1.0"
description = "SolShield MCP Server — DeFi Position Monitoring for Kilo Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "solders>=0.21.0",
    "solana>=0.34.0",
    "structlog>=24.0.0",
]

[project.scripts]
solshield = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
